# foxden

./: .gitignore  .pre-commit-config.yaml  planning.md  pyproject.toml  pyrepo.nginx
.github/workflows/: ci.yml  release.yml
scripts/: dummy_wheel.py  get_token.py  make_503.py  upload_endpoint.py
src/foxden/: config.py  models.py  types.py
src/foxden/backend/index/: __init__.py  dummy.py  files.py  pep503.py  pep691.py
src/foxden/models/: __init__.py
src/foxden/server/: __init__.py  api.py  main.py  oidc.py  simple.py  upload.py
src/foxden/utils/: __init__.py  http.py  pep503.py  pep691.py
